src/styles/blocks/page.scss
.page {
  scroll-behavior: smooth;

  &__body {
    margin: 0;
    background-color: $c-light-pink;

    &--with-menu {
      overflow: hidden;
    }
  }

  &__nav {
    position: fixed;
    top: 0;
    left: 0;
    right: 0;

    transform: translateX(-100%);
    transition: transform 0.3s;

    &:target {
      transform: translateX(0);
    }
  }

  &__top-actions {
    height: 64px;
    display: flex;
    justify-content: space-between;
    align-items: center;

    margin-bottom: 32px;

    @include onTablet {
      margin-bottom: 80px;
    }

    @include onDesktop {
      margin-bottom: 135px;
    }

    @include onXLDesktop {
      margin-bottom: 144px;
    }
  }

  &__header {
    @media (max-width: 360px) {
      margin-bottom: 100px;
    }
  }

  &__section {
    margin-bottom: 80px;

    @include onDesktop {
      margin-bottom: 152px;
    }
  }

  &__link {
    padding-top: 80px;

    @include onDesktop {
      padding-top: 152px;
    }
  }
}

